# delilah-agentic

./: .env  .env.example  .gitattributes  .gitignore  .gitignore.txt  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_NEXT_STEPS.md.old  DEVELOPMENT.md  DEVELOPMENT_STATUS.md  Dockerfile  Dockerfile.dev  FIX_LIST.md.old  FRONTEND_SETUP.md  IMMEDIATE-ACTIONS.md  INTEGRATION_PROGRESS.md  INTEGRATION_PROMPT.md  NEXT-STEPS.md  NEXT_DEVELOPER.md  NEXT_DEVELOPER.md.old  ONBOARDING_PROMPT.md  PROJECT_ORIENTATION.md  QUICKSTART.md  README.md  ROADMAP.md  TEST_ERRORLOG.txt  TEST_OUTPUT.txt  alembic.ini  analyze.js  anderson-report.docx  anderson-report.txt  anthropic-narrative-generator.js  api.py  assessments_backup.csv  babel.config.js  clean-install.bat  clean-mocks.bat  cleanup-and-commit.bat  (+122 more)
.aws/: task-definition.json
IHAs/: Anderson, Patrick CVSIHACAT.docx  Copy of Abboud, Fawzi IHA1MVA2.docx  Copy of Abdul Hussein, Jawad IHA2.docx  Copy of Al Jammal, Ali IHA.docx  Copy of Al Naqeeb, Ali IHA(1).docx  Copy of Al Naqeeb, Ali IHA.docx  Copy of Al Naqeeb, Ali IHA2.docx  Copy of Balduzzi, Mary IHA.docx  Copy of Balduzzi, Mary IHA3HOMEACCESS.docx  Copy of Balduzzi, Mary IHA4_ATTENDANTCAREFORM1.docx  Copy of Bollar, Rita IHA Form 1 Hospital Discharge.docx  Copy of Bromow, Philip IHA2.docx  Copy of Egalite, Patrice IHA2_FINAL_SF.docx  Copy of El Jammal, Ali IHA2.docx  Copy of Fincham, Sophia IHA.docx  Copy of Fincham, Sophia IHA2.docx  Copy of Fowler, Mike IHA.docx  Copy of Hayward, Alexandra IHA2.docx  Copy of Ledoux, Jean-Marc IHA Form 1.docx  (+21 more)
(+1410 files in other folders)
